Trying to make things work

--- a/InventoryManager/MainWindow.xaml
+++ b/InventoryManager/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button x:Name="AddOrderStatus" Content="Add OrderStatus_Text" HorizontalAlignment="Left" Margin="72,72,0,0" VerticalAlignment="Top" Width="132" Click="AddOrderStatus_Click"/>
+
     </Grid>
 </Window>
