--- a/InventoryManager/MainWindow.xaml
+++ b/InventoryManager/MainWindow.xaml
@@ -5,9 +5,4 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InventoryManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <Button x:Name="AddOrderStatus" Content="Add OrderStatus_Text" HorizontalAlignment="Left" Margin="72,72,0,0" VerticalAlignment="Top" Width="132" Click="AddOrderStatus_Click"/>
-
-    </Grid>
-</Window>
+        Title="MainWindow" Height="350" Width="525"/>
