--- a/InventoryManager/MainWindow.xaml
+++ b/InventoryManager/MainWindow.xaml
@@ -5,4 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InventoryManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525"/>
+        Title="MainWindow" Height="350" Width="525">
+    <Grid HorizontalAlignment="Left" Height="324" Margin="-3,0,-3.6,-3.2" VerticalAlignment="Top" Width="525">
+        <TextBox x:Name="Product_Code_textBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Product_Code" VerticalAlignment="Top" Width="120" Margin="10,10,0,0"/>
+        <TextBox x:Name="Product_Name_textBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Product_Name" VerticalAlignment="Top" Width="120" Margin="10,38,0,0"/>
+        <TextBox x:Name="List_Price_textBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap"   Text="List_Price" VerticalAlignment="Top" Width="120" Margin="10,66,0,0"/>
+        <Button x:Name="Add_Product_button" Content="Add Product" HorizontalAlignment="Left" Margin="31,94,0,0" VerticalAlignment="Top" Width="75" Click="Add_Product_button_Click"/>
+    </Grid>
+
+
+</Window>
