--- a/InventoryManager/EmployeeInterface.xaml
+++ b/InventoryManager/EmployeeInterface.xaml
@@ -20,7 +20,7 @@
             <ComboBoxItem Content="Lunch"/>
         </ComboBox>
         <Label x:Name="label" Content="label" HorizontalAlignment="Left" Margin="343,534,0,0" VerticalAlignment="Top" Width="213"/>
-        <Button x:Name="button" Content="Ok" HorizontalAlignment="Left" Margin="90,480,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button" Content="Ok" HorizontalAlignment="Left" Margin="90,480,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
         <Button x:Name="button1" Content="Logout" HorizontalAlignment="Left" Margin="310,480,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
 
     </Grid>
