--- a/InventoryManager/MainWindow.xaml
+++ b/InventoryManager/MainWindow.xaml
@@ -14,6 +14,7 @@
         <Button x:Name="Update_Product_button" Content="Update product" HorizontalAlignment="Left" VerticalAlignment="Top" Width="95" Margin="90,122,0,0" Click="Update_Product_button_Click"/>
         <TextBox x:Name="Product_Id_Textbox" HorizontalAlignment="Left" Height="23" Margin="26,10,0,0" TextWrapping="Wrap" Text="Product ID" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="AddProductLocationbutton" Content="Product Location" HorizontalAlignment="Left" Margin="308,50,0,0" VerticalAlignment="Top" Width="105" Click="AddProductLocationbutton_Click"/>
+        <Button x:Name="button" Content="Click to create product location" HorizontalAlignment="Left" Margin="247,282,0,0" VerticalAlignment="Top" Width="181" Click="button_Click"/>
     </Grid>
 
 
