--- a/InventoryManager/inventoryInterface.xaml
+++ b/InventoryManager/inventoryInterface.xaml
@@ -8,11 +8,11 @@
         Title="inventoryInterface" Height="700" Width="700">
     <Grid>
         <Label x:Name="label" Content="Enter Locaton" HorizontalAlignment="Left" Margin="57,64,0,0" VerticalAlignment="Top" Width="99"/>
-        <Button x:Name="button" Content="Enter" HorizontalAlignment="Left" Margin="71,428,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="156" Margin="68,99,0,0" VerticalAlignment="Top" Width="436" SelectionChanged="listBox_SelectionChanged"/>
+        <Button x:Name="button" Content="Enter" HorizontalAlignment="Left" Margin="71,428,0,0" VerticalAlignment="Top" Width="75" Click="button_Click" IsEnabled="False"/>
+        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="156" Margin="68,99,0,0" VerticalAlignment="Top" Width="436" SelectionChanged="listBox_SelectionChanged" />
         <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="151,68,0,0" VerticalAlignment="Top" Width="201" SelectionChanged="comboBox_SelectionChanged"/>
-        <Button x:Name="button2" Content="Update" HorizontalAlignment="Left" Margin="78,319,0,0" VerticalAlignment="Top" Width="76" Click="button2_Click"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="24" Margin="177,270,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" TextChanged="textBox_TextChanged_1"/>
+        <Button x:Name="button2" Content="Update" HorizontalAlignment="Left" Margin="78,319,0,0" VerticalAlignment="Top" Width="76" Click="button2_Click" IsEnabled="False"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="24" Margin="177,270,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" TextChanged="textBox_TextChanged_1" IsEnabled="False"/>
         <Label x:Name="label1" Content="update Quanity" HorizontalAlignment="Left" Margin="72,267,0,0" VerticalAlignment="Top" Width="114"/>
 
     </Grid>
