--- a/InventoryManager/Receiving.xaml
+++ b/InventoryManager/Receiving.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InventoryManager"
         mc:Ignorable="d"
-        Title="Receiving" Height="300" Width="300">
+        Title="Receiving" Height="500" Width="500">
     <Grid>
         <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="136" Margin="37,33,0,0" VerticalAlignment="Top" Width="172"/>
         <Button x:Name="button" Content="Ok" HorizontalAlignment="Left" Margin="37,195,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button1" Content="Back" HorizontalAlignment="Left" Margin="323,377,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
 
     </Grid>
 </Window>
