--- a/InventoryManager/orderpicking.xaml
+++ b/InventoryManager/orderpicking.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InventoryManager"
         mc:Ignorable="d"
-        Title="orderpicking" Height="300" Width="300">
+        Title="orderpicking" Height="500" Width="500">
     <Grid>
         <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="100" Margin="40,37,0,0" VerticalAlignment="Top" Width="100"/>
         <Button x:Name="button" Content="ok" HorizontalAlignment="Left" Margin="40,159,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button1" Content="Back" HorizontalAlignment="Left" Margin="325,413,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
 
     </Grid>
 </Window>
