--- a/InventoryManager/SecondWindow.xaml
+++ b/InventoryManager/SecondWindow.xaml
@@ -16,6 +16,7 @@
         <Label x:Name="label1_Copy1" Content="User Name" HorizontalAlignment="Left" Margin="240,160,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label1_Copy2" Content="Password" HorizontalAlignment="Left" Margin="240,200,0,0" VerticalAlignment="Top"/>
         <Button x:Name="button" Content="Submit Info" HorizontalAlignment="Left" Margin="242,250,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <Button x:Name="button1" Content="back" HorizontalAlignment="Left" Margin="390,250,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
 
     </Grid>
 </Window>
