--- a/Manager/MainProductWindow.xaml
+++ b/Manager/MainProductWindow.xaml
@@ -5,22 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InventoryManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid HorizontalAlignment="Left" Height="324" Margin="-3,0,-3.6,-3.2" VerticalAlignment="Top" Width="525">
-        <TextBox x:Name="Product_Code_textBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Product_Code" VerticalAlignment="Top" Width="120" Margin="26,38,0,0"/>
-        <TextBox x:Name="Product_Name_textBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Product_Name" VerticalAlignment="Top" Width="120" Margin="26,66,0,0"/>
-        <TextBox x:Name="List_Price_textBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap"   Text="List_Price" VerticalAlignment="Top" Width="120" Margin="26,94,0,0"/>
-        <Button x:Name="Add_Product_button" Content="Add Product" HorizontalAlignment="Left" Margin="10,122,0,0" VerticalAlignment="Top" Width="75" Click="Add_Product_button_Click"/>
-        <Button x:Name="Update_Product_button" Content="Update product" HorizontalAlignment="Left" VerticalAlignment="Top" Width="95" Margin="90,122,0,0" Click="Update_Product_button_Click"/>
-        <TextBox x:Name="Product_Id_Textbox" HorizontalAlignment="Left" Height="23" Margin="26,10,0,0" TextWrapping="Wrap" Text="Product ID" VerticalAlignment="Top" Width="120"/>
+        Title="Inventory Menu" Height="400" Width="525">
 
+    <Grid HorizontalAlignment="Left" Height="360" Margin="-3,0,-3.333,-53.333" VerticalAlignment="Top" Width="525">
+        <TextBox x:Name="Product_Code_Textbox"    HorizontalAlignment="Left" Height="25" Margin="104,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" MaxLength="5"/>
+        <TextBox x:Name="Product_Name_textBox"    HorizontalAlignment="Left" Height="25" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120" Margin="104,38,0,0" MaxLength="50"/>
+        <TextBox x:Name="List_Price_textBox"      HorizontalAlignment="Left" Height="25" TextWrapping="Wrap"    VerticalAlignment="Top" Width="120" Margin="104,66,0,0"/>
+        <TextBox x:Name="Unit_Price_textBox"      HorizontalAlignment="Left" Height="25" Margin="104,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="ReorderLevel_textBox"    HorizontalAlignment="Left" Height="25" Margin="104,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="ReorderQuantity_textBox" HorizontalAlignment="Left" Height="25" Margin="104,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="OnHand_textBox" HorizontalAlignment="Left" Height="25" Margin="104,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="Location_textBox" HorizontalAlignment="Left" Height="25" Margin="231,244,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="95" IsEnabled="False"/>
+        <ComboBox x:Name="category_comboBox" SelectedValuePath="Content" HorizontalAlignment="Left" Margin="104,214,0,0" VerticalAlignment="Top" Height ="25"  Width="120" SelectionChanged="category_comboBox_SelectionChanged"/>
+        <ComboBox x:Name="Location_comboBox" SelectedValuePath="Content" HorizontalAlignment="Left" Margin="104,244,0,0" VerticalAlignment="Top" Height ="25"  Width="120" SelectionChanged="category_comboBox_SelectionChanged"/>
+
+        <Button x:Name="Add_Product_button"    Content="Add Product"    HorizontalAlignment="Left" Margin="11,278,0,0"  VerticalAlignment="Top" Width="95" Click="Add_Product_button_Click"/>
+        <Button x:Name="Update_Product_button" Content="Update product" HorizontalAlignment="Left" Margin="129,278,0,0" VerticalAlignment="Top" Width="95"  Click="Update_Product_button_Click" IsEnabled="False"/>
+        <Button x:Name="Disc_Product_button"   Content="Discontinue"    HorizontalAlignment="Left" Margin="231,278,0,0" VerticalAlignment="Top" Width="95" Click="Disc_Product_button_Click" IsEnabled="False"/>
+
+
+        <Button x:Name="button" Content="back" HorizontalAlignment="Left" Margin="11,330,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
 
         <ListBox x:Name="listBox" 
-                 
-                 HorizontalAlignment="Left" Height="283" Margin="340,10,0,0" VerticalAlignment="Top" Width="175" SelectionChanged="listBox_SelectionChanged"
+                 HorizontalAlignment="Left" Height="340" Margin="340,10,0,0" VerticalAlignment="Top" Width="175" SelectionChanged="listBox_SelectionChanged"
         />
-        <ComboBox x:Name="comboBox" SelectedValuePath="Content" HorizontalAlignment="Left" Margin="203,11,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="comboBox_SelectionChanged"/>
-        <Button x:Name="button" Content="back" HorizontalAlignment="Left" Margin="59,242,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+
+        <Label x:Name="Product_Code_label" Content="Product Code" HorizontalAlignment="Left" Height="25" Margin="11,10,0,0" VerticalAlignment="Top" Width="88"/>
+        <Label x:Name="Product_Name_label" Content="Product Name" HorizontalAlignment="Left" Height="25" Margin="11,38,0,0" VerticalAlignment="Top" Width="88"/>
+        <Label x:Name="List_Price_label"   Content="List Price" HorizontalAlignment="Left" Height="25" Margin="11,66,0,0" VerticalAlignment="Top" Width="88"/>
+        <Label x:Name="Unit_Price_label"   Content="Unit Price" HorizontalAlignment="Left" Height="25" Margin="11,94,0,0" VerticalAlignment="Top" Width="88"/>
+        <Label x:Name="Category_label"     Content="Category" HorizontalAlignment="Left" Height="25" Margin="11,214,0,0" VerticalAlignment="Top" Width="88" />
+        <Label x:Name="Reorder_level"      Content="Reorder Level" HorizontalAlignment="Left" Height="25" Margin="11,124,0,0" VerticalAlignment="Top" Width="88"/>
+        <Label x:Name="ReorderQuantity"    Content="Reorder Quant" HorizontalAlignment="Left" Height="25" Margin="11,154,0,0" VerticalAlignment="Top" Width="88"/>
+        <Label x:Name="Location_label"     Content="Location" HorizontalAlignment="Left" Height="25" Margin="10,244,0,0" VerticalAlignment="Top" Width="88"/>
+
+        <Label x:Name="OnHand_label" Content="On Hand" HorizontalAlignment="Left" Height="25" Margin="11,184,0,0" VerticalAlignment="Top" Width="88"/>
+        
+
 
     </Grid>
 
