--- a/InventoryManager/orderpicking.xaml
+++ b/InventoryManager/orderpicking.xaml
@@ -7,9 +7,14 @@
         mc:Ignorable="d"
         Title="orderpicking" Height="500" Width="500">
     <Grid>
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="100" Margin="40,37,0,0" VerticalAlignment="Top" Width="100"/>
-        <Button x:Name="button" Content="ok" HorizontalAlignment="Left" Margin="40,159,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button1" Content="Back" HorizontalAlignment="Left" Margin="325,413,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
+        <ListBox x:Name="orders_listBox"       HorizontalAlignment="Left" Height="280" Margin="40,37,0,0"  VerticalAlignment="Top" Width="130" SelectionChanged="orders_listBox_SelectionChanged"/>
+        <ListBox x:Name="orderDetails_listBox" HorizontalAlignment="Left" Height="280" Margin="192,37,0,0" VerticalAlignment="Top" Width="260" SelectionChanged="orderDetails_listBox_SelectionChanged"/>
+
+        <Button x:Name="complete_button" Content="Complete Order" HorizontalAlignment="Left" Margin="352,336,0,0" VerticalAlignment="Top" Width="100" Click="complete_button_Click" IsEnabled="False"/>
+
+
+        <Button x:Name="button1" Content="Back" HorizontalAlignment="Left" Margin="377,413,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
+
 
     </Grid>
 </Window>
